--- a/_data/archive.yml
+++ b/_data/archive.yml
@@ -1,9 +1,9 @@
 - type: dates
   title: 日期
   url: /dates/
-- type: categories
-  title: 分类
-  url: /categories/
+# - type: categories
+#   title: 分类
+#   url: /categories/
 - type: tags
   title: 标签
   url: /tags/
